--- a/.output/public/404.html
+++ b/.output/public/404.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.DeG1jBgh.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BeeZ6JKs.js">
+<link rel="stylesheet" href="/_nuxt/entry.PyhqBT-t.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/4ojphfyU.js">
 <link rel="prefetch" as="image" type="image/jpeg" href="/_nuxt/bayanihan-college.B3ns9qnn.jpg">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.DEdZ6qCP.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BCjWfc2p.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D6JSvO5q.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.SWzu_puR.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/U4CJjLQD.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBavJoSc.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CCb5UAza.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BnpITEn8.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DleocPzs.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BiNKMdSm.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.Bkv_zTjr.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/u0BVX2R8.js">
-<script type="module" src="/_nuxt/BeeZ6JKs.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733265357527,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"b99eafc9-6099-4e7c-af32-40752550f80b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BckzTGJR.js">
+<script type="module" src="/_nuxt/4ojphfyU.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733275013012,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"eaea9218-793b-4728-bb02-37eacd86146b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
