--- a/.output/public/index.html
+++ b/.output/public/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.DeG1jBgh.css" crossorigin>
+<link rel="stylesheet" href="/_nuxt/entry.PyhqBT-t.css" crossorigin>
 <link rel="stylesheet" href="/_nuxt/default.DEdZ6qCP.css" crossorigin>
 <link rel="stylesheet" href="/_nuxt/index.Dgd4vA2G.css" crossorigin>
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/_payload.json?b99eafc9-6099-4e7c-af32-40752550f80b">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BeeZ6JKs.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BCjWfc2p.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DVD9XVsf.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/_payload.json?eaea9218-793b-4728-bb02-37eacd86146b">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/4ojphfyU.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D6JSvO5q.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/COAH5wkc.js">
 <link rel="prefetch" as="image" type="image/jpeg" href="/_nuxt/bayanihan-college.B3ns9qnn.jpg">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.SWzu_puR.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/U4CJjLQD.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBavJoSc.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CCb5UAza.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BnpITEn8.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DleocPzs.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BiNKMdSm.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.Bkv_zTjr.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/u0BVX2R8.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BckzTGJR.js">
 <link rel="prefetch" as="image" type="image/jpeg" href="/_nuxt/openlibrary-bc.DEbhDVhe.jpg">
 <link rel="prefetch" as="image" type="image/jpeg" href="/_nuxt/bc-rc.9A2toVBy.jpg">
-<script type="module" src="/_nuxt/BeeZ6JKs.js" crossorigin></script></head><body><div id="__nuxt"><div class="app"><div class="layout"><!--[--><div><img alt="Bayanihan College" src="/_nuxt/bayanihan-college.B3ns9qnn.jpg"><div class="bayanihan-bg"></div><img alt="OpenLibrary" src="/_nuxt/openlibrary-bc.DEbhDVhe.jpg"><img alt="Royal Professional" src="/_nuxt/bc-rc.9A2toVBy.jpg"></div><!--]--></div></div></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/_payload.json?b99eafc9-6099-4e7c-af32-40752550f80b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/",1733265357525]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"b99eafc9-6099-4e7c-af32-40752550f80b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/4ojphfyU.js" crossorigin></script></head><body><div id="__nuxt"><div class="app"><div class="layout"><!--[--><div><img alt="Bayanihan College" src="/_nuxt/bayanihan-college.B3ns9qnn.jpg"><div class="bayanihan-bg"></div><img alt="OpenLibrary" src="/_nuxt/openlibrary-bc.DEbhDVhe.jpg"><img alt="Royal Professional" src="/_nuxt/bc-rc.9A2toVBy.jpg"></div><!--]--></div></div></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/_payload.json?eaea9218-793b-4728-bb02-37eacd86146b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/",1733275013011]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"eaea9218-793b-4728-bb02-37eacd86146b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
