--- a/.output/public/200.html
+++ b/.output/public/200.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.PyhqBT-t.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/4ojphfyU.js">
+<link rel="stylesheet" href="/_nuxt/entry.JLpl3VHw.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CefaWO4K.js">
 <link rel="prefetch" as="image" type="image/jpeg" href="/_nuxt/bayanihan-college.B3ns9qnn.jpg">
-<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.DEdZ6qCP.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D6JSvO5q.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.C0GYNDnU.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CL__z55C.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.SWzu_puR.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BnpITEn8.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DleocPzs.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BiNKMdSm.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBOn-lb1.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bz6s4k20.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DCAA2ZTG.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.Bkv_zTjr.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BckzTGJR.js">
-<script type="module" src="/_nuxt/4ojphfyU.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733275013012,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"eaea9218-793b-4728-bb02-37eacd86146b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D4fPMTSe.js">
+<script type="module" src="/_nuxt/CefaWO4K.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733286380937,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"13dd8409-8807-42b0-a11d-e5bb5bdbccdd",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
