--- a/.output/public/200.html
+++ b/.output/public/200.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.DKFp1afK.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CR-hXZ8u.js">
+<link rel="stylesheet" href="/_nuxt/entry.B0HXxOHk.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/HXUgbRsl.js">
 <link rel="prefetch" as="image" type="image/jpeg" href="/_nuxt/bayanihan-college.B3ns9qnn.jpg">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.CSkJzB48.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cmf04uVX.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BPNzNB7_.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.SWzu_puR.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DMnbIznL.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BTLlgrdh.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Uk-6_FC7.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/mwSID61N.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DLgCF53m.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BWZPLQBz.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.Bkv_zTjr.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DfxkStEz.js">
-<script type="module" src="/_nuxt/CR-hXZ8u.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733352466873,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"8469894a-d31e-4102-9e87-b68967fb44d7",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CuESbMZd.js">
+<script type="module" src="/_nuxt/HXUgbRsl.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733436301908,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"375155d6-d765-4d73-ac92-535a1d689ecf",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
