--- a/.output/public/404.html
+++ b/.output/public/404.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.B0HXxOHk.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/HXUgbRsl.js">
+<link rel="stylesheet" href="/_nuxt/entry.DSKDgQrj.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CadfZkRa.js">
 <link rel="prefetch" as="image" type="image/jpeg" href="/_nuxt/bayanihan-college.B3ns9qnn.jpg">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.CSkJzB48.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BPNzNB7_.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBDXcgpr.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.SWzu_puR.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/mwSID61N.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DLgCF53m.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BWZPLQBz.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/4Unbc_mx.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BjgKFqsB.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DlOZ7YkC.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.Bkv_zTjr.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CuESbMZd.js">
-<script type="module" src="/_nuxt/HXUgbRsl.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733436301909,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"375155d6-d765-4d73-ac92-535a1d689ecf",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/m1IzTeV-.js">
+<script type="module" src="/_nuxt/CadfZkRa.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733458380633,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"2afa90c6-1d49-4f77-8f85-3386fccbdda0",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
