--- a/.output/public/404.html
+++ b/.output/public/404.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.DSKDgQrj.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CadfZkRa.js">
+<link rel="stylesheet" href="/_nuxt/entry.CAXHCcXT.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CXCh-_Ny.js">
 <link rel="prefetch" as="image" type="image/jpeg" href="/_nuxt/bayanihan-college.B3ns9qnn.jpg">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.CSkJzB48.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBDXcgpr.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DJLSfACJ.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.SWzu_puR.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/4Unbc_mx.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BjgKFqsB.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DlOZ7YkC.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cf26IZTk.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DwkbPLnN.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/bq9A4Eyp.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.Bkv_zTjr.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/m1IzTeV-.js">
-<script type="module" src="/_nuxt/CadfZkRa.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733458380633,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"2afa90c6-1d49-4f77-8f85-3386fccbdda0",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D8_3dmV5.js">
+<script type="module" src="/_nuxt/CXCh-_Ny.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733465965965,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"23aa78fd-52da-4991-a739-60e25558ff20",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
